# tianshu

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
components/tianshu_core/: idf_component.yml
components/tianshu_core/host_election/: host_election.cc  host_election.h
components/tianshu_core/mesh_network/: mesh_network.cc  mesh_network.h
components/tianshu_core/protocols/: mesh_proto.cc  mesh_proto.h
components/tianshu_mesh_core/: CMakeLists.txt  Kconfig
components/tianshu_mesh_core/host_election/: host_election.h
components/tianshu_mesh_core/mesh_network/: mesh_network.h
components/tianshu_web/: CMakeLists.txt  Kconfig  idf_component.yml
components/tianshu_web/web_server/: web_server.cc  web_server.h
components/tianshu_web/web_static/static/: style.css
components/tianshu_web_service/: CMakeLists.txt
components/tianshu_web_service/web_server/: web_server.h
components/tianshu_web_service/web_static/: index.html
components/tianshu_web_service/web_static/static/: app.js
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc
main/assets/boards/tianshu_agri/: config.json
main/assets/boards/tianshu_mesh/: config.json
main/boards/common/: board.cc  board.h
main/boards/tianshu-mesh/: board_tianshu_mesh.cc  config.json
main/display/: display.h
main/sensor_manager/: sensor_manager.h
partitions/v1/: 4m.csv
scripts/: release.py
